--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,7 +10,7 @@
         <a href="#" routerLink="/formas-pago"><p>{{"Formas de pago" | translate}}</p></a>
     </div>
     <div class="footCol">
-        <p>{{"Contacto" | translate}}</p>
+        <p>{{"Acerca de..." | translate}}</p>
         <div class="banderas">
             <p><img (click)="switchLanguage('en')" class="bandera" src="../../../assets/img/otros/UK.png" alt=""></p>
             <p><img (click)="switchLanguage('es')" class="bandera" src="../../../assets/img/otros/SPAIN.webp" alt=""></p>
