--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -136,23 +136,21 @@
         <img src="../../../assets/img/otros/destacado3.jpg">
         <div class="destacadoTitle3">
             <h3>HELLBOY 31. HELLBOY Y LA AIDP: 1957 </h3>
-            <p>NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP</p>
-            <p>Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. 
-                Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de 
-                la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.
+            <p>{{"NUEVAS HISTORIAS QUE AHONDAN EN EL PASADO DE HELLBOY COMO AGENTE DE LA AIDP" | translate}}</p>
+            <p>
+                {{"Una nueva edición de Brujería y demonología de Gustav Strobl causa estragos. Un fantasma merodea una fosa común. Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy."|translate}}
             </p>
-            <button class="botonDestacado boton2" routerLink="/libros/89">Leer más</button>
+            <button class="botonDestacado boton2" routerLink="/libros/89">{{"Leer más" | translate}}</button>
         </div>
     </div>
     <div class="destacado">
         <div class="destacadoTitle2">
             <h3>Blue Lock</h3>
-            <p>¡Comienza la segunda fase del proyecto BLUE LOCK!</p>
-            <p>¡Los egoístas lucharán en aún más campos de batalla!
-                Tras ganar el gran partido contra la selección japonesa de Sub-20, Isagi y el resto de chicos de BLUE LOCK se han convertido en auténticos héroes.
-                ¡Mientras los delanteros gozan de unas breves vacaciones, Jinpachi Ego ya les está preparando un nuevo desafío!
+            <p>{{"¡Comienza la segunda fase del proyecto BLUE LOCK!" | translate}}</p>
+            <p>
+                {{"¡Los egoístas lucharán en aún más campos de batalla! Tras ganar el gran partido contra la selección japonesa de Sub-20, Isagi y el resto de chicos de BLUE LOCK se han convertido en auténticos héroes. ¡Mientras los delanteros gozan de unas breves vacaciones, Jinpachi Ego ya les está preparando un nuevo desafío!"|translate}}
             </p>
-            <button class="botonDestacado boton1" routerLink="/serie/13">Leer más</button>
+            <button class="botonDestacado boton1" routerLink="/serie/13">{{"Leer más" | translate}}</button>
         </div>
         <img src="../../../assets/img/otros/destacado2.jpg">
     </div>
@@ -160,10 +158,8 @@
         <img src="../../../assets/img/otros/destacado1.jpg">
         <div class="destacadoTitle">
             <h3>One Piece nº 108</h3>
-            <p>¡¡Aquí tenéis una historia de piratas que buscan el gran tesoro, el One Piece!!</p>
-            <p>La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón 
-                aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk! 
-            </p>
+            <p>{{"¡¡Aquí tenéis una historia de piratas que buscan el gran tesoro, el One Piece!!" | translate}}</p>
+            <p>{{"La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk!" | translate}}</p>
             <button class="botonDestacado boton3" routerLink="/serie/24">{{"Leer más" | translate}}</button>
         </div>
     </div>
