--- a/src/app/components/adelanto/adelanto.component.css
+++ b/src/app/components/adelanto/adelanto.component.css
@@ -27,7 +27,7 @@
 }
 
 .miniatura{
-    width: 500px;
+    width: 90%;
     box-shadow: 0px 0px 18px 6px rgba(0,0,0,0.75);
     transition: 0.3s;
 }
@@ -78,7 +78,7 @@
 }
 
 .logo{
-    width: 160px;
+    width: 40%;
     margin-left: 30px;
 }
 
