--- a/src/app/components/error404/error404.component.html
+++ b/src/app/components/error404/error404.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="cuerpo">
-<img src="https://www.vizion.com/wp-content/uploads/2018/09/shutterstock_479042983.jpg" alt="" class="imagen">
+<img src="../../../assets/img/otros/404.png" alt="" class="imagen">
+Regresa a la página principal pinchando <a href="/home">aquí</a>
 </div>
 <app-footer></app-footer>
