--- a/src/app/components/user-info/user-info.component.html
+++ b/src/app/components/user-info/user-info.component.html
@@ -29,7 +29,7 @@
                 <button type="button" class="boton" routerLink="/carrito"><i class="bi bi-cart"></i> Carrito</button>
             </div>
         </div>
-        <div class="data">
+        <div class="cerrarSesionData">
             <button type="button" class="boton cerrarSesion" (click)="logout()"><i class="bi bi-box-arrow-right" ></i> Cerrar Sesión</button>
         </div>
     </div>
