--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -36,7 +36,7 @@
                 <p>{{this.noticias[2].fecha}}</p>
             </div>
         </div>
-        <div class="bloque">
+        <div class="bloque" routerLink="/noticias/{{this.noticias[3].id}}">
             <div class="imagen">
                 <img src="{{this.noticias[3].miniatura}}" alt="">
             </div>
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="row3">
-        <div class="bloque">
+        <div class="bloque" routerLink="/noticias/{{this.noticias[4].id}}">
             <div class="imagen">
                 <img src="{{this.noticias[4].miniatura}}" alt="">
             </div>
@@ -56,7 +56,7 @@
                 <p>{{this.noticias[4].fecha}}</p>
             </div>
         </div>
-        <div class="bloque">
+        <div class="bloque" routerLink="/noticias/{{this.noticias[5].id}}">
             <div class="imagen">
                 <img src="{{this.noticias[5].miniatura}}" alt="">
             </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="bloque">
             <div class="imagen">
-                <img src="{{this.noticias[6].miniatura}}" alt="">
+                <img src="{{this.noticias[6].miniatura}}" alt="" routerLink="/noticias/{{this.noticias[6].id}}">
             </div>
             <div class="contenido">
                 <h4>{{this.noticias[6].titulo}}</h4>
@@ -76,7 +76,7 @@
         </div>
         <div class="bloque">
             <div class="imagen">
-                <img src="{{this.noticias[7].miniatura}}" alt="">
+                <img src="{{this.noticias[7].miniatura}}" alt="" routerLink="/noticias/{{this.noticias[7].id}}">
             </div>
             <div class="contenido">
                 <h4>{{this.noticias[7].titulo}}</h4>
