--- a/src/app/components/error404/error404.component.html
+++ b/src/app/components/error404/error404.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="cuerpo">
 <img src="../../../assets/img/otros/404.png" alt="" class="imagen">
-Regresa a la página principal pinchando <a href="/home">aquí</a>
+<p>Regresa a la página principal pinchando <a href="/home">aquí</a></p>
 </div>
 <app-footer></app-footer>
