--- a/src/app/components/libros-etiquetas/libros-etiquetas.component.html
+++ b/src/app/components/libros-etiquetas/libros-etiquetas.component.html
@@ -9,6 +9,9 @@
             </h5>
             <div class="ver">
                 <h3>CATÁLOGO</h3>
+                <div class="verseries">
+                    <a href="#" routerLink="etiquetas-todas"><h4>VER ETIQUETAS <i class="bi bi-chevron-down"></i></h4></a>
+                </div>
             </div>
         </div>
     </div>
