--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,12 +5,12 @@
     </div>
     <div class="footCol">
         <a href="#" routerLink="/aviso-legal"><p>{{"Aviso Legal" | translate}}</p></a>
-        <p>{{"Privacidad y Cookies" | translate}}</p>
+        <a href="#" routerLink="/cookies"><p>{{"Privacidad y Cookies" | translate}}</p></a>
         <a href="#" routerLink="/politica-privacidad"><p>{{"Política de Privacidad" | translate}}</p></a>
         <a href="#" routerLink="/formas-pago"><p>{{"Formas de pago" | translate}}</p></a>
     </div>
     <div class="footCol">
-        <p>{{"Acerca de..." | translate}}</p>
+        <a href="#" routerLink="/acerca"><p>{{"Acerca de..." | translate}}</p></a>
         <div class="banderas">
             <p><img (click)="switchLanguage('en')" class="bandera" src="../../../assets/img/otros/UK.png" alt=""></p>
             <p><img (click)="switchLanguage('es')" class="bandera" src="../../../assets/img/otros/SPAIN.webp" alt=""></p>
@@ -18,12 +18,12 @@
     </div>
     <div class="footCol">
         <div class="redes">
-            <a href=""><i class="bi bi-instagram iconoRedes"></i></a>
-            <a href=""><i class="bi bi-linkedin iconoRedes"></i></a>
-            <a href=""><i class="bi bi-youtube iconoRedes"></i></a>
-            <a href=""><i class="bi bi-twitter-x iconoRedes"></i></a>
-            <a href=""><i class="bi bi-facebook iconoRedes"></i></a>
-            <a href=""><i class="bi bi-tiktok iconoRedes"></i></a>
+            <a href="https://www.instagram.com"><i class="bi bi-instagram iconoRedes"></i></a>
+            <a href="https://www.linkedin.com/feed/"><i class="bi bi-linkedin iconoRedes"></i></a>
+            <a href="https://www.youtube.com"><i class="bi bi-youtube iconoRedes"></i></a>
+            <a href="https://x.com/home?lang=es"><i class="bi bi-twitter-x iconoRedes"></i></a>
+            <a href="https://www.facebook.com/?locale=es_ES"><i class="bi bi-facebook iconoRedes"></i></a>
+            <a href="https://www.tiktok.com/es/"><i class="bi bi-tiktok iconoRedes"></i></a>
         </div>
     </div>
 </footer>
