--- a/src/app/components/pagos-pagina/pagos-pagina.component.css
+++ b/src/app/components/pagos-pagina/pagos-pagina.component.css
@@ -9,6 +9,7 @@
     box-shadow: 0px 7px 5px 0px rgba(204,204,204,1);
     padding-top: 90px;
     padding-bottom: 60px;
+    overflow: hidden;
   }
   
   
@@ -147,6 +148,7 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
+    width: 80%;
     p{
       font-size: 15px;
       font-weight: 300;
@@ -179,10 +181,27 @@
     margin-bottom: 30px;
   }
 
-  @media (max-width: 700px) {
+  @media only screen and (max-width: 575px){
     .checkout {
-      margin-left: 5%;
-      margin-right: 5%;
+      margin-left: 2%;
+      margin-right: 2%;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    .checkout-in{
+      margin-left: 2%;
+      margin-right: 2%;
+    }
+
+    .form-control{
+      width: 100%;
+    }
+  }
+
+  @media only screen and (min-width: 576px) and (max-width: 767px){
+    .checkout {
+      margin-left: 2%;
+      margin-right: 2%;
       padding-left: 10px;
       padding-right: 10px;
     }
@@ -195,4 +214,20 @@
       width: 100%;
     }
   }
-  
+
+  @media (min-width: 768px) and (max-width: 993px) {
+    .checkout {
+      margin-left: 2%;
+      margin-right: 2%;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    .checkout-in{
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+
+    .form-control{
+      width: 100%;
+    }
+  }
