--- a/src/app/components/noticias-gestion/noticias-gestion.component.css
+++ b/src/app/components/noticias-gestion/noticias-gestion.component.css
@@ -37,7 +37,7 @@ h2{
 }
 
 .contenedor{
-    margin-top: 8%;
+    margin-top: 12%;
     margin-left: 14%;
     margin-right: 14%;
     margin-bottom: 4%;
@@ -74,21 +74,99 @@ h2{
     }
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 575px){
     .contenedor{
         margin-left: 5%;
         margin-right: 5%;
-        margin-top: 100px;
-
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .divTabla{
         margin-left: 0%;
         margin-right: 0%;
         text-align: left;
+        font-size: 12px;
         
         .esconder{
             display: none;
+        }
+
+        td{
+            font-size: 12px;
+        }
+
+        th{
+            font-size: 12px;
+        }
+
+        .row .mt-2 .justify-content-between{
+            display: flex;
+            border: 1px solid black;
+        }
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px){
+    .contenedor{
+        margin-left: 5%;
+        margin-right: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .divTabla{
+        margin-left: 0%;
+        margin-right: 0%;
+        text-align: left;
+        font-size: 12px;
+        
+        .esconder{
+            display: none;
+        }
+
+        td{
+            font-size: 12px;
+        }
+
+        th{
+            font-size: 12px;
+        }
+
+        .row .mt-2 .justify-content-between{
+            display: flex;
+            border: 1px solid black;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 993px) {
+    .contenedor{
+        margin-left: 5%;
+        margin-right: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .divTabla{
+        margin-left: 0%;
+        margin-right: 0%;
+        text-align: left;
+        font-size: 12px;
+        
+        .esconder{
+            display: none;
+        }
+
+        td{
+            font-size: 12px;
+        }
+
+        th{
+            font-size: 12px;
         }
 
         .row .mt-2 .justify-content-between{
