--- a/src/app/components/product-page/product-page.component.css
+++ b/src/app/components/product-page/product-page.component.css
@@ -147,7 +147,148 @@
     }
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 575px){
+    .box{
+        margin-left: 5%;
+        margin-right: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
+
+        .datos{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            order: 5;
+            line-height: 10px;
+            bottom: 0;
+            left: 60px;
+            text-align: center;
+            background-color: #ebebeb;
+            padding: 15px;
+            padding-right: 70px;
+            padding-left: 70px;
+            word-wrap: break-word;  
+            white-space: normal;
+            order: 3;
+        }
+
+        .precio{  
+            width: 100%;
+            justify-content: left;
+            button{
+                text-align: left;
+                font-size: 25px;
+                width: 100%;
+                font-weight: 300;
+        
+                i{
+                    font-size: 30px;
+                }
+            }
+        }
+
+        .column{
+            width: 100%;
+        }
+
+        .column2{
+            width: 100%;
+        }
+
+        .sinopsis{
+            width: 100%;
+            text-align: justify;
+        }
+
+        .imagen{
+            img{
+                width: 100%;
+            }
+        }
+    }
+
+    .breadcrumbs{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+
+
+@media only screen and (min-width: 576px) and (max-width: 767px){
+    .box{
+        margin-left: 5%;
+        margin-right: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
+
+        .datos{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            order: 5;
+            line-height: 10px;
+            bottom: 0;
+            left: 60px;
+            text-align: center;
+            background-color: #ebebeb;
+            padding: 15px;
+            padding-right: 70px;
+            padding-left: 70px;
+            word-wrap: break-word;  
+            white-space: normal;
+            order: 3;
+        }
+
+        .precio{  
+            width: 100%;
+            justify-content: left;
+            button{
+                text-align: left;
+                font-size: 25px;
+                width: 100%;
+                font-weight: 300;
+        
+                i{
+                    font-size: 30px;
+                }
+            }
+        }
+
+        .column{
+            width: 100%;
+        }
+
+        .column2{
+            width: 100%;
+        }
+
+        .sinopsis{
+            width: 100%;
+            text-align: justify;
+        }
+
+        .imagen{
+            img{
+                width: 100%;
+            }
+        }
+    }
+
+    .breadcrumbs{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 993px) {
     .box{
         margin-left: 5%;
         margin-right: 5%;
