--- a/src/app/components/recuperar-contrasena/recuperar-contrasena.component.html
+++ b/src/app/components/recuperar-contrasena/recuperar-contrasena.component.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="d-grid gap-2 mb-3 botonVolver">
-          <a routerLink="/home" class="atras"><i class="bi bi-arrow-left"></i></a>
+          <a routerLink="/userInfo/{{this.usuarioId}}" class="atras"><i class="bi bi-arrow-left"></i></a>
         </div>
       </form>
     </div>
