--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -3,7 +3,7 @@
     <div class="menu">
         <div class="breadcrumbs">
             <h5>
-                <a href="#" routerLink="/categoria/{{this.categoria}}" class="mainBread">{{this.categoria}}</a>
+                <a href="#" routerLink="/categoria/{{this.categoria}}" class="mainBread">{{this.categoria | translate}}</a>
                 > 
                 Series
             </h5>
