--- a/src/app/components/user-info/user-info.component.html
+++ b/src/app/components/user-info/user-info.component.html
@@ -2,7 +2,7 @@
 <div class="cuerpo">
     <div class="iconoPerfil">
         <i class="bi bi-person-circle"></i>
-        <h3>Bienvenido</h3>
+        <h3>¡¡Bienvenido!!</h3>
     </div>
     <hr>
     <div class="info">
