--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -3,14 +3,14 @@
     <div class="menu">
         <div class="breadcrumbs">
             <h5>
-                <a class="mainBread">{{this.categoria}}</a>
+                <a class="mainBread">{{this.categoria | translate}}</a>
                 > 
-                <a>TODOS LOS VOLUMENES</a>
+                <a>{{"TODOS LOS VOLUMENES" | translate}}</a>
             </h5>
             <div class="ver">
-                <h3>CATÁLOGO</h3>
+                <h3>{{"CATÁLOGO" | translate}}</h3>
                 <div class="verseries">
-                    <a href="#" routerLink="/series/{{this.idLibro}}"><h4>VER SERIES <i class="bi bi-chevron-down"></i></h4></a>
+                    <a href="#" routerLink="/series/{{this.idLibro}}"><h4>{{"VER SERIES" | translate}} <i class="bi bi-chevron-down"></i></h4></a>
                 </div>
             </div>
         </div>
