--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
     <div class="portada portada{{this.numeroPortada}}">
         <img src="../../../assets/img/otros/logo1.png" class="logoPortada">
         <div class="carruselText3">
-            <p>Dioses contra Humanos <br> ¡¡¡Las batallas que deciden el destino del hombre!!!</p>
-            <button class="botonDestacado botonCarrusel1" routerLink="/serie/19">Leer más</button>
+            <p>{{"Dioses contra Humanos ¡¡¡Las batallas que deciden el destino del hombre!!!" | translate}}</p>
+            <button class="botonDestacado botonCarrusel1" routerLink="/serie/19">{{"Leer más" | translate}}</button>
         </div>
     </div> 
 }
@@ -12,8 +12,8 @@
     <div class="portada portada{{this.numeroPortada}}">
         <img src="../../../assets/img/otros/logo2.png" class="logoPortada">
         <div class="carruselText3">
-            <p>La tribu de los elfos reclama venganza sobre quienes los purgaron. ¡¿Sus aliados son ahora sus enemigos?! </p>
-            <button class="botonDestacado botonCarrusel2" routerLink="/serie/20">Leer más</button>
+            <p>{{"La tribu de los elfos reclama venganza sobre quienes los purgaron. ¡¿Sus aliados son ahora sus enemigos?!" | translate}}</p>
+            <button class="botonDestacado botonCarrusel2" routerLink="/serie/20">{{"Leer más" | translate}}</button>
         </div>
     </div> 
 }
@@ -21,8 +21,8 @@
     <div class="portada portada{{this.numeroPortada}}">
         <img src="../../../assets/img/otros/logo3.png" class="logoPortada">
         <div class="carruselText3">
-            <p> Venom contra Spiderman, una vez más... ¡pero como si fuera por primera vez! Eddie Brock se enfrenta a un trepamuros diferente al que conoce.</p>
-            <button class="botonDestacado botonCarrusel3" routerLink="/libros/34">Leer más</button>
+            <p>{{"Venom contra Spiderman, una vez más... ¡pero como si fuera por primera vez! Eddie Brock se enfrenta a un trepamuros diferente al que conoce." | translate}}</p>
+            <button class="botonDestacado botonCarrusel3" routerLink="/libros/34">{{"Leer más" | translate}}</button>
         </div>
     </div> 
 }
@@ -62,8 +62,8 @@
                     <img src="../../../assets/img/otros/Novedad2.jpg" alt="">
                 </div>
                 <div class="textoNov1">
-                    <h3>MASACRE ABSOLUTA</h3>
-                    <p>¡La ola sádica del simbionte asesino en serie comienza aquí! Como si Venom no fuera lo suficientemente letal, ¿imagina qué pasaría si su "otro" simbiótico se hubiera unido a un psicópata asesino? Ahí es donde entra Cletus Kasady.</p>
+                    <h3>{{"MASACRE ABSOLUTA" | translate}}</h3>
+                    <p>{{"¡La ola sádica del simbionte asesino en serie comienza aquí! Como si Venom no fuera lo suficientemente letal, ¿imagina qué pasaría si su otro simbiótico se hubiera unido a un psicópata asesino? Ahí es donde entra Cletus Kasady." | translate}}</p>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="textoNov2">
                     <h3>DANDADAN</h3>
-                    <p>Esta entretenida historia de extraterrestres y fantasmas te dejará con ganas de más desde su primer capítulo. Oculto, un friki que cree en los ovnis, y Ayase, su compañera criada por una abuela médium, vivirán una historia que les hará cuestionarse todo lo que han creído hasta el momento.</p>
+                    <p>{{"Esta entretenida historia de extraterrestres y fantasmas te dejará con ganas de más desde su primer capítulo. Oculto, un friki que cree en los ovnis, y Ayase, su compañera criada por una abuela médium, vivirán una historia que les hará cuestionarse todo lo que han creído hasta el momento." | translate}}</p>
                 </div>
             </div>
             <div class="novedad" routerLink="/serie/22">
@@ -83,7 +83,7 @@
                 </div>
                 <div class="textoNov3">
                     <h3>FULL METAL ALCHEMIST KANZENBAN</h3>
-                    <p>Cuando tan solo eran unos niños, los hermanos Edward y Alphonse Elric usaron la alquimia para cometer un pecado capital: intentar la transmutación humana, pero no se resignan a su destino y están dispuestos a recuperar sus cuerpos.</p>
+                    <p>{{"Cuando tan solo eran unos niños, los hermanos Edward y Alphonse Elric usaron la alquimia para cometer un pecado capital: intentar la transmutación humana, pero no se resignan a su destino y están dispuestos a recuperar sus cuerpos." | translate}}</p>
                 </div>
             </div>
         </div>
