--- a/src/app/components/user-info/user-info.component.css
+++ b/src/app/components/user-info/user-info.component.css
@@ -26,7 +26,7 @@
             font-size: 50px;
             color: white;
             background-color: #1F2544;
-            width: min-content;
+            width: 50%;
         }
 
         i{
